--- a/src/app/components/die/die.module.css
+++ b/src/app/components/die/die.module.css
@@ -1,9 +1,13 @@
 .divDie{
     height: 100%;
     width: 100%;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 5px;
     justify-content: center;
     align-items: center;
+    justify-items: center;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.15);
